--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 			
 			.decorator1 {
 				background-color: grey;
-				color: white;
+				color: beige;
 				padding: 0.1in;
 			}
 			
@@ -82,7 +82,7 @@
 			
 			.bar {
 				background-color: darkgreen;
-				color: white;
+				color: darkgrey;
 				height: 0.2in;
 				font-size: 0.18in;
 			}
@@ -193,7 +193,7 @@
 		<section id="summary", class="decorator2 text-center">
 			<h1 style="font-size: 160%">Personal Summary</h1>
 			<p>
-				Become an effective programmer who craves new knowledge, produces 
+				I am an effective programmer who craves new knowledge, produces 
 				reusable solutions to complex problems and acts as a good team player.
 			</p>
 		</section>
@@ -250,7 +250,7 @@
 			</div>
 			<ul class="font-bold" style="text-align: left">
 				<li>
-					learned Differential and Integral Calculus, Number Theory, Linear Algebra and so on
+					learned Differential and Integral Calculus, Number Theory, Linear Algebra and some more advanced topics
 				</li>
 			</ul>
 		</section>
