--- a/index.html
+++ b/index.html
@@ -77,13 +77,13 @@
 			.bar-container {
 				background-color: lightblue;
 				width: 100%;
-				height: 0.15in;
+				height: 0.14in;
 			}
 			
 			.bar {
 				background-color: darkgreen;
 				color: darkgrey;
-				height: 0.15in;
+				height: 0.14in;
 				font-size: 0.18in;
 			}
 			
@@ -154,7 +154,7 @@
 				</div>
 				<br>
 				<div class="bar-container">
-					<div class="bar" style="width: 65%">Java</div>
+					<div class="bar" style="width: 65%">Java,Android</div>
 				</div>
 				<br>
 				<div class="bar-container">
@@ -170,7 +170,7 @@
 				</div>
 				<br>
 				<div class="bar-container">
-					<div class="bar" style="width: 60%">JQeury</div>
+					<div class="bar" style="width: 60%">JQeury,React.js</div>
 				</div>
 				<br>
 				<div class="bar-container">
@@ -179,10 +179,6 @@
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 50%">Winsock,Batch</div>
-				</div>
-				<br>
-				<div class="bar-container">
-					<div class="bar" style="width: 45%">Android</div>
 				</div>
 				<br>
 				<div class="bar-container">
@@ -195,6 +191,7 @@
 					<li>Capable of metaprogramming</li>
 					<li>Good at writing generic code</li>
 					<li>Capable of advanced Mathematics</li>
+					<li>Wrote some Android applications in Java</li>
 				</ul>
 			</h1>
 		</section>
