--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			}
 			
 			ul.skills {
-				font-size: 0.16in;
+				font-size: 0.15in;
 			}
 		</style>
 	</head>
@@ -175,6 +175,10 @@
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 60%">AngularJS</div>
+				</div>
+				<br>
+				<div class="bar-container">
+					<div class="bar" style="width: 60%">MySQL</div>
 				</div>
 				<br>
 				<div class="bar-container">
