--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 			}
 			
 			ul.skills {
-				font-size: 0.15in;
+				font-size: 0.16in;
 			}
 		</style>
 	</head>
@@ -134,7 +134,7 @@
 				</div>
 				<br>
 				<div class="bar-container">
-					<div class="bar" style="width: 80%">Unity</div>
+					<div class="bar" style="width: 90%">Unity</div>
 				</div>
 				<br>
 				<div class="bar-container">
@@ -191,11 +191,11 @@
 				
 				<ul class="skills">
 					<li>Proficient in low-level programming in C++</li>
-					<li>Have experience in 3D graphic programming and engine programming</li>
+					<li>Have experience in 3D graphic/engine programming</li>
+					<li>Wrote Android applications in Java</li>
 					<li>Capable of metaprogramming</li>
 					<li>Good at writing generic code</li>
 					<li>Capable of advanced Mathematics</li>
-					<li>Wrote some Android applications in Java</li>
 				</ul>
 			</h1>
 		</section>
@@ -236,10 +236,10 @@
 					based on OpenGL API
 				</li>
 				<li>
-					wrote a heavily templated C++ library that resembles STL
+					wrote a heavily templated C++ library that resembles Standard Template Library
 				</li>
 				<li>
-					developed behavior tree-based AI and a number of path-finding solutions
+					developed BehaviorTree-based artificial intelligence and a number of path-finding solutions
 				</li>
 				<li>
 					produced C++ components that solve Linear Algebra problems and 
@@ -249,7 +249,7 @@
 					wrote network applications based on Winsock API
 				</li>
 				<li>
-					produced a wide variety of Unity-based video games written in C#
+					produced a wide variety of Unity games in C#
 				</li>
 			</ul>
 			<br>
