--- a/index.html
+++ b/index.html
@@ -146,32 +146,30 @@
 				</div>
 				<br>
 				<div class="bar-container">
+					<div class="bar" style="width: 75%">Java,Android</div>
+				</div>
+				<br>
+				<div class="bar-container">
+					<div class="bar" style="width: 65%">JQeury,React.js</div>
+				</div>
+				<br>
+				<div class="bar-container">
 					<div class="bar" style="width: 65%">PHP</div>
+				</div>
+				<br>
+				<div class="bar-container">
+					<div class="bar" style="width: 65%">HTML5,DOM,CSS</div>
 				</div>
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 65%">Python</div>
 				</div>
-				<br>
-				<div class="bar-container">
-					<div class="bar" style="width: 65%">Java,Android</div>
-				</div>
-				<br>
-				<div class="bar-container">
-					<div class="bar" style="width: 60%">HTML5,DOM</div>
-				</div>
-				<br>
-				<div class="bar-container">
-					<div class="bar" style="width: 60%">CSS</div>
-				</div>
+				
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 60%">gulp.js</div>
 				</div>
-				<br>
-				<div class="bar-container">
-					<div class="bar" style="width: 60%">JQeury,React.js</div>
-				</div>
+				
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 60%">AngularJS</div>
