--- a/index.html
+++ b/index.html
@@ -116,6 +116,11 @@
 				&ensp;<b>github/portfolio</b>: <a href="https://github.com/JacobMuscleUp" target=_blank>github.com/JacobMuscleUp</a>
 				<br>
 				<b>phone</b>: (+61)0411 471 821
+				<br>
+				<b>google play dev</b>: 
+				<a href="https://play.google.com/store/apps/developer?id=JacobTheProgrammer/MassMonster" target=_blank>
+					https://play.google.com/store/apps/developer?id=JacobTheProgrammer/MassMonster
+				</a>
 			</span>
 		</header>
 		<section id="skill", class="decorator1 text-center">
@@ -146,7 +151,7 @@
 				</div>
 				<br>
 				<div class="bar-container">
-					<div class="bar" style="width: 75%">Java,Android</div>
+					<div class="bar" style="width: 80%">Java,Android</div>
 				</div>
 				<br>
 				<div class="bar-container">
@@ -201,7 +206,7 @@
 			<h1 style="font-size: 160%">Personal Summary</h1>
 			<p>
 				I am an effective programmer who craves new knowledge, produces 
-				reusable solutions to complex problems and acts as a good team player.
+				reusable and well-architected solutions to complex problems.
 			</p>
 		</section>
 		<section id="experience", class="decorator2 text-center">
