--- a/index.html
+++ b/index.html
@@ -127,11 +127,15 @@
 			<h1>
 				<div>Skills</div>
 				<div class="bar-container">
-					<div class="bar" style="width: 100%">C++</div>
+					<div class="bar" style="width: 100%">C++,VisualStudio</div>
 				</div>
 				<br>
 				<div class="bar-container">
 					<div class="bar" style="width: 90%">OpenGL,GLSL/HLSL</div>
+				</div>
+				<br>
+				<div class="bar-container">
+					<div class="bar" style="width: 90%">Github/lab,Bitbucket</div>
 				</div>
 				<br>
 				<div class="bar-container">
